--- a/ScrollAnimation/style.css
+++ b/ScrollAnimation/style.css
@@ -1,19 +1,47 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  display:flex;
+  background-color: #e4e4e2;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  overflow: hidden;
   margin: 0;
+  overflow-x: hidden;
 }
-h2{
-    color: blue;
+
+h1 {
+  margin: 10px;
+}
+
+.box {
+  background-color: rgb(136, 31, 146);
+  color: #dfdfe7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 450px;
+  height: 100px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 5px rgba(20, 8, 8, 0.3);
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
+}
+
+.box:nth-of-type(even) {
+  transform: translateX(-400%);
+}
+
+.box.show {
+  transform: translateX(0);
+}
+
+.box h2 {
+  font-size: 45px;
 }
