--- a/form wave animation/style.css
+++ b/form wave animation/style.css
@@ -17,7 +17,7 @@ body{
      width:400px;
     height:500px; 
     background: #000;
-    box-shadow: 0  0 50px  #0ef;
+    box-shadow: 0  0 50px  rgb(224, 70, 23);
     border-radius: 20px;
     padding:40px; 
     overflow: hidden;
@@ -47,9 +47,7 @@ body{
     left:0;
 
 }
-/* .wrapper.active .form-wrapper.sign-up{
-    transform: translateY(-450px);
-} */
+
 .wrapper.active .form-wrapper.sign-Up {
     transform: translateY(-420px);
 }
@@ -96,14 +94,14 @@ h2{
     font-size: 14px;
 }
 .remember label input{
-    accent-color: #0ef;
+    accent-color: rgb(255, 60, 0);
 }
 button{
     position: relative;
     width: 100%;
     height: 40px;
-    background: #0ef;
-    box-shadow: 0 0 10px #0ef;
+    background: rgb(87, 1, 90);
+    box-shadow: 0 0 10px rgb(217, 255, 0);
     font-size: 16px;
     color:#000;
     font-weight: 500;
