--- a/todolist/style.css
+++ b/todolist/style.css
@@ -31,8 +31,8 @@ form button{
 form button{
     padding:0.5rem;
     margin-left: 0.5rem;
-    height: 5vh;
-    width:5vw;
+    height: 6vh;
+    width:6vw;
    
     color:rgb(18, 197, 167);
     background: #fff;
@@ -40,7 +40,7 @@ form button{
     transition: all 0.3s ease;
 }
 form button:hover{
-    background: #fda085;
+    background: rgb(18, 197, 167);
     color:#fff;
 }
 .todo-container{
@@ -53,22 +53,43 @@ form button:hover{
     list-style: none;
 }
 .todo{
-    margin:0.5rem;
-    /* padding:0.5rem; */
+    margin:1rem;
+    padding:0.5rem;
     background: #fff;
     color:rgb(18, 197, 167);
-    font-size: 1.5rem;
+    font-size: 1rem;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
+    transition: all 0.5s ease; 
 }
 .todo li{
     flex:1;
 }
 .trash-btn,
 .completed-btn{
-    background: #db4015;
-    color:#ffffff;
+    background: rgb(18, 197, 167);;
+    color:#0f1111;
     border:none;
+    padding:.1rem;
     cursor:pointer;
+    font-size: 1rem;
+    
 } 
+.completed-btn{
+    background: orangered;
+}
+.todo-item{
+    padding:0rem 0.5rem;
+}
+.fa-trash,.fa-check{
+    pointer-events: none;
+}
+.completed{
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+.fall{
+    transform: translateY(8rem)rotateZ('20deg');
+    opacity: 0;
+}
