--- a/Content Placeholder/style.css
+++ b/Content Placeholder/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #ecf0f1;
+  background-color: #90def1;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -20,7 +20,7 @@ img {
 }
 
 .card {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px rgba(76, 36, 189, 0.2);
   border-radius: 10px;
   overflow: hidden;
   width: 350px;
@@ -47,7 +47,7 @@ img {
 }
 
 .card-excerpt {
-  color: #777;
+  color: #107280;
   margin: 10px 0 20px;
 }
 
@@ -71,7 +71,7 @@ img {
 }
 
 .author-info small {
-  color: #aaa;
+  color: #107280;
   margin-top: 5px;
 }
 
@@ -97,10 +97,10 @@ img {
 
 @keyframes bgPos {
   0% {
-    background-position: 50% 0;
+    background-position: 60% 0;
   }
 
   100% {
-    background-position: -150% 0;
+    background-position: 150% 0;
   }
 }
