--- a/Content Placeholder/style.css
+++ b/Content Placeholder/style.css
@@ -20,7 +20,7 @@ img {
 }
 
 .card {
-  box-shadow: 0 2px 10px rgba(76, 36, 189, 0.2);
+  box-shadow: 10px 20px 10px rgba(26, 23, 25, 0.2);
   border-radius: 10px;
   overflow: hidden;
   width: 350px;
