--- a/stopwatch/style.css
+++ b/stopwatch/style.css
@@ -19,7 +19,7 @@ body{
     padding: 20px 24px;
     border-radius: 20px;
 }
-.timer-Display{
+.timerDisplay{
     font-size: 50px;
     font-weight: 600;
     
