html and css done

--- a/Recipe App/style.css
+++ b/Recipe App/style.css
@@ -30,7 +30,28 @@ form input[type="text"]{
     flex-grow: 1;
     margin-right: 10px;
 }
-@media screen and(max-width:600px){
+form input[type="text"],button[type="submit"]{
+  border:none;
+  font-size: 18px;
+  padding:10px;
+  border-radius: 4px;
+}
+form button[type="submit"]{
+    background-color: rgba(25, 2, 0,0.5);
+    color:#fff;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+form button[type="submit"]:hover{
+    background-color:rgba(123,123,345,0.6);
+}
+.recipe-container{
+    text-align: center;
+    margin-top:20px;
+}
+
+/*responsive code*/
+@media screen and (max-width:600px){
     header nav{
         flex-direction: column;
     }
